syntax = "proto3";
package odam;

option go_package = ".;odam";

// Reference info about detection, camera, timestamp and etc.
message ObjectInformation{
    // Camera identifier
    string cam_id = 1;
    // Timestamp in Unix UTC
    int64 timestamp = 2;
    // Bytes representation of image (PNG)
    bytes image = 3;
    // Reference information about detection rectangle
    Detection detection = 4;
    // Reference information about object class
    ClassInfo class = 5;
    // Reference information about virtual line (detection line)
    VirtualLineInfo virtual_line = 6;
    // Reference information about tracking parameters of object (speed + track points)
    TrackInfo track_information = 7;
}

// Reference information about detection rectangle
message Detection{
    int32 x_left = 1;
    int32 y_top = 2;
    int32 height = 3;
    int32 width = 4;
}

// Reference information about object class
message ClassInfo{
    int32 class_id = 1;
    string class_name = 2;
}

// Reference information about virtual line (detection line)
message VirtualLineInfo{
    int64 id = 1;
    int32 left_x = 2;
    int32 left_y = 3;
    int32 right_x = 4;
    int32 right_y = 5;
}

// Information about estimated speed and track itself
message TrackInfo{
    float estimated_speed = 1;
    repeated Point points = 2;
}

// Union of EuclideanPoint and WGS84Point structures
message Point{
    EuclideanPoint euclidean_point = 1;
    WGS84Point wgs84_point = 2;
}

// Representation of a point in Euclidean space
message EuclideanPoint{
    float x = 1;
    float y = 2;
}

// Representation of a point in spatial system called WGS84. See ref. https://en.wikipedia.org/wiki/World_Geodetic_System#WGS84
message WGS84Point{
    float longitude = 1;
    float latitude = 2;
}

// Response from server-side application
message Response{
  string message = 1;
  string warning = 2;
  string error = 3;
}

// ServiceYOLO - service for second and third yolo stages 
// in car number search cascade
service ServiceYOLO{
    rpc SendDetection(ObjectInformation) returns (Response){};
}